<resources>
    <string name="app_name">UCC Portal</string>
    <string name="profile_picture">Profile picture</string>
    <string name="search_icon">Search icon</string>
    <string name="student_s_portal">Student\'s Portal</string>
    <string name="favourited_trending">Favourited Trending</string>
    <string name="graduation">The management of the University of Cape Coast (UCC) has released the graduation list for 2021</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>