<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/masterHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/userPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/profile_picture"/>
        <TextView
            android:id="@+id/greetMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hey"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPic"/>
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Betty"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/userPic"
            app:layout_constraintStart_toEndOf="@id/greetMsg"/>
        <ImageView
            android:id="@+id/menuBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/white_rectangular_bg"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintBottom_toBottomOf="parent">
            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Search..."
                android:imeOptions="actionSearch"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:importantForAutofill="no"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/search_icon"
                android:background="@drawable/search_icon_background"
                android:src="@drawable/ic_search"
                android:tint="@color/colorPrimary"
                android:padding="6dp"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@id/masterHeader">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/portal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/white_rectangular_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/finance">
                <ImageView
                    android:id="@+id/ivAcademics"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/portal"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/student_s_portal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Academics"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/finance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/white_rectangular_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toEndOf="@id/portal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/finance"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/student_s_portal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Finance"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/white_rectangular_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="@id/portal"
                app:layout_constraintTop_toBottomOf="@id/portal"
                app:layout_constraintEnd_toEndOf="@id/portal"
                >
                <ImageView
                    android:id="@+id/ivRegister"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_register"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/student_s_portal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Registeration"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/white_rectangular_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="@id/finance"
                app:layout_constraintTop_toBottomOf="@id/finance"
                app:layout_constraintEnd_toEndOf="@id/finance"
                >
                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_person_outline"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/student_s_portal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Profile"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
            <android.support.constraint.ConstraintLayout
                android:id="@+id/cons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="20dp"
                android:background="@drawable/trending_background"
                app:layout_constraintTop_toBottomOf="@id/health"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintEnd_toEndOf="@id/news"
                >
                <TextView
                    android:id="@+id/trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trending"
                    android:textAllCaps="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/white_rectangular_bg"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favourite"
                    app:layout_constraintTop_toTopOf="@id/trending"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/favourited_trending"/>
                <TextView
                    android:id="@+id/trendingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graduation"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/favourite"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/app_menu"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"/>
</android.support.constraint.ConstraintLayout>