<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:fillViewport="true"
            android:scrollbars="none"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/divider">
            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:id="@+id/portal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:padding="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="20dp"
                        android:background="@drawable/white_rectangular_bg"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/finance">
                        <ImageView
                            android:id="@+id/ivCourses"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/course"
                            android:padding="8dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/student_s_portal"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Courses"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/finance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:padding="15dp"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:background="@drawable/white_rectangular_bg"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toEndOf="@id/portal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >
                        <ImageView
                            android:id="@+id/ivTimetable"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/time"
                            android:padding="8dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/student_s_portal"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Timetable"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
<!--                Row 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:padding="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/white_rectangular_bg"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toStartOf="@id/portal"
                        app:layout_constraintTop_toBottomOf="@id/portal"
                        app:layout_constraintEnd_toEndOf="@id/portal"
                        >
                        <ImageView
                            android:id="@+id/ivStudentsButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/students"
                            android:padding="8dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/student_s_portal"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Students"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:padding="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/white_rectangular_bg"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toStartOf="@id/finance"
                        app:layout_constraintTop_toBottomOf="@id/finance"
                        app:layout_constraintEnd_toEndOf="@id/finance"
                        >
                        <ImageView
                            android:id="@+id/ivProfile"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/registration"
                            android:padding="8dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/student_s_portal"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Registration"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <!--            Department-->
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="left">
                   <LinearLayout
                       android:id="@+id/depart"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="20dp"
                       android:layout_marginLeft="40dp"
                       android:padding="15dp"
                       android:gravity="center"
                       android:orientation="vertical"
                       android:background="@drawable/white_rectangular_bg"
                       app:layout_constraintDimensionRatio="H,1:1"
                       app:layout_constraintStart_toStartOf="@id/health"
                       app:layout_constraintTop_toBottomOf="@id/health"
                       app:layout_constraintEnd_toEndOf="@id/health"

                       >
                       <ImageView
                           android:id="@+id/ivDepartment"
                           android:layout_width="100dp"
                           android:layout_height="100dp"
                           android:src="@drawable/department_icon"
                           android:padding="8dp"
                           android:layout_margin="8dp"
                           android:contentDescription="@string/student_s_portal"/>

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:text="Departments"
                           android:textSize="16sp"
                           android:textColor="@color/colorPrimary"
                           android:textStyle="bold" />
                   </LinearLayout>
               </LinearLayout>
                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:padding="20dp"
                    android:background="@drawable/trending_background"
                    app:layout_constraintTop_toBottomOf="@id/depart"
                    app:layout_constraintStart_toStartOf="@id/depart"
                    app:layout_constraintEnd_toEndOf="@id/news"
                    >
                    <TextView
                        android:id="@+id/trending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trending"
                        android:textAllCaps="true"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:background="@drawable/white_rectangular_bg"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favourite"
                        app:layout_constraintTop_toTopOf="@id/trending"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/favourited_trending"/>
                    <TextView
                        android:id="@+id/trendingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/graduation"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@id/favourite"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconSize="30dp"
            app:labelVisibilityMode="unlabeled"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/app_menu"/>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigation"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>